--- a/index.html
+++ b/index.html
@@ -32,26 +32,17 @@
     <script>
         // Housing data from CSV
         const housingData = {
-            0: "Neviriah",
-            6: "Elvor",
-            7: "GasLightatdawn",
-            8: "Koren",
-            12: "Sailer",
-            13: "Sensayy",
-            17: "Baelys",
-            21: "guest",
-            22: "Briar",
-            23: "Lionhart",
-            24: "Halfyy",
-            28: "Aex",
-            29: "Gwen",
-            31: "Diff",
-            32: "Kafka",
-            38: "Nobbel",
-            41: "Phate",
-            43: "Cirillie",
-            46: "Wacsnie",
-            50: "Sungli"
+            4: "Redwinetoast",
+            5: "Moko",
+            10: "Sharvali",
+            12: "Devi",
+            21: "Daerthor",
+            27: "Reshyk",
+            35: "Burn",
+            36: "Ash/Myna",
+            37: "Vordae",
+            39: "Waya",
+            42: "Balgar",
         };
 
         // House plot positions loaded from external JSON file
