--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             5: "Moko",
             10: "Sharvali",
             12: "Devi",
+            14: "Cirup",
             21: "Daerthor",
             27: "Reshyk",
             35: "Burn",
