--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             37: "Vordae",
             39: "Waya",
             42: "Balgar",
+            44: "Vell",
         };
 
         // House plot positions loaded from external JSON file
