--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             12: "Devi",
             14: "Cirup",
             21: "Daerthor",
+            21: "Vordae's GF",
             27: "Reshyk",
             35: "Burn",
             36: "Ash/Myna",
