--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             37: "Vordae's GF",
             39: "Waya",
             42: "Balgar",
+            41: "Ricky",
             44: "Vell",
         };
 
