--- a/index.html
+++ b/index.html
@@ -35,18 +35,17 @@
             4: "Redwinetoast",
             5: "Moko",
             10: "Sharvali",
-            12: "Devi",
-            14: "Cirup",
-            21: "Daerthor",
+            12: "Devi/Cirup",
+            14: "Cirup/Reshyk/Ash-Myna",
+            22: "Daerthor",
             26: "Vordae",
-            27: "Reshyk",
             35: "Burn",
-            36: "Ash/Myna",
+            36: "Ash-Myna/Cirup",
             37: "Vordae's GF",
-            39: "Waya",
-            42: "Balgar",
+            39: "MissChris",
             41: "Ricky",
             44: "Vell",
+            51: "Balgar",
         };
 
         // House plot positions loaded from external JSON file
