--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             10: "Sharvali",
             12: "Devi/Cirup",
             14: "Cirup/Reshyk/Ash-Myna",
+            20: "Ary",
             22: "Daerthor",
+            23: "River",
             26: "Vordae",
             35: "Burn",
             36: "Ash-Myna/Cirup",
